--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Statistics::R.
 
+0.04  2010-XX-XX
+      - Basic code cleanup with the intention of doing major refactoring by-and-by
+      - Fix the test suite
+
 0.03  2008-08-16
       - Fixed RT Bug #23948: bug in Statistics::R 
       - Fixed --gui
