--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 Revision history for Perl extension Statistics::R.
 
+0.06  TO BE RELEASED
+    - Fix error() when used as an accessor (RT #61335)
+    - Silence DESTROY() when R is not found
+
 0.05  2010-09-13
     - Major code refactor:
       - strict + warnings wherever possible
