--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@ Revision history for Perl extension Statistics::R.
 0.06  TO BE RELEASED
     - Fix error() when used as an accessor (RT #61335)
     - Silence DESTROY() when R is not found
+    - Fix "uninitialized value" warning in read_processR() (RT #61414)
 
 0.05  2010-09-13
     - Major code refactor:
