--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 Revision history for Perl extension Statistics::R.
 
 x.xx
+    - Version number in sync between Statistics::R and Statistics::R::Bridge
     - More portable filenames (RT #70391)
     - Typo fixes
     - Improved readme generation in Makefile.PL
