Added a load test

--- a/Changes
+++ b/Changes
@@ -1,8 +1,10 @@
 Revision history for Perl extension Statistics::R.
 
 x.xx 
-    - Removed the error() method. Errors are fatal are die() right away
-    - Removed the R() method
+    - Added a load test
+    - Added a run() method that replaces send() and read() and checks for errors
+    - Removed the error() method. Errors are now fatal are die() right away
+    - Removed the undocumented R() method
     - POD work
     - Version number in sync between Statistics::R and Statistics::R::Bridge
     - More portable filenames (RT #70391)
