--- a/Changes
+++ b/Changes
@@ -4,7 +4,7 @@ x.xx
     - Aliased a few functions for consistency
     - Replaced the error() method by a dummy. Errors are now fatal are die() right away
     - Added a load test
-    - Added a run() method that replaces send() and read() and checks for errors
+    - Added a run() method that replaces send() and read() and checks for errors (RT #70361)
     - Removed the undocumented R() method
     - POD work
     - Version number in sync between Statistics::R and Statistics::R::Bridge
