--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 Revision history for Perl extension Statistics::R.
 
+0.20  XXXX-XX-XX
+    - Refactored the entire R bridge to avoid dealing with files. All data is 
+      stored in memory and passed by pipes. This fixes bug RT #70314
+    - Refactored the communications in shared mode.
+
 0.10  2011-08-27  
     - Refactoring to remove old code doing platform-specific operations
     - Lots of code cleanup
