--- a/Changes
+++ b/Changes
@@ -1,8 +1,9 @@
 Revision history for Perl extension Statistics::R.
 
 0.20  XXXX-XX-XX
-    - Refactored the entire R bridge to avoid dealing with files. All data is 
-      stored in memory and passed by pipes. This fixes bug RT #70314
+    - Refactored the entire R bridge to avoid writing and reading files. All
+      data is now stored in memory and passed by pipes. This fixes bug RT #11309,
+      #11918, #66190 and #70314
     - Refactored the communications in shared mode.
 
 0.10  2011-08-27  
