--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Statistics::R.
 
+0.x
+    - Tests more robust to different locales (reported by Knut Behrends) 
+
 0.21  2011-09-04
     - Tweaked the regular expressions that parse the R output stream for added
       speed and robustness
