Future-proof of locale bugfix (commit 79f88f8002de921d29a3fb731acac2bd7a5f7f10)
This is done by building a regular expression that catches errors based on the locale of R

--- a/Changes
+++ b/Changes
@@ -1,7 +1,8 @@
 Revision history for Perl extension Statistics::R.
 
 TO BE RELEASE
-    - Handle multiple locales when looking for errors
+    - Handle multiple locales when looking for errors (patch by Jean Véronis and
+      Brian Cassidy)
 
 0.30  2012-11-15
     - Skip tests that hang on Windows (thanks Clifford Sobchuk and Gisbert W.
