--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 Revision history for Perl extension Statistics::R.
 
-TO BE RELEASED
-    - Speedup of communications with R
+0.31  2013-02-07
+    - Simplification and speedup of communications with R
     - Handle multiple locales when looking for errors (patch by Jean Véronis and
       Brian Cassidy)
 
