--- a/Changes
+++ b/Changes
@@ -1,7 +1,7 @@
 Revision history for Perl extension Statistics::R.
 
-0.32  TBD
-    - Fixed POD error (RT #91438)
+0.32  2013-12-18 
+    - Fixed POD error (reported by Srividya Vaidyanathan, RT #91438)
 
 0.31  2013-02-07
     - Simplification and speedup of communications with R
