--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@ Revision history for Perl extension Statistics::R.
     - Properly handle the quit() command (reported by tecolo, Github #5)
     - Prefer using the 'bin' constructor instead of 'r_bin'
     - Method version() to get the version of R
+    - Better handling of R internationalization
 
 0.32  2013-12-18 
     - Fixed POD error (reported by Srividya Vaidyanathan, RT #91438)
