Reworked is_started() to fix an obscure issue in DESTROY Reported by Pär Larsson, RT #107246

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Statistics::R.
 
+x.xx  xxxx-xx-xx
+    - Fixed obscure issue in DESTROY (reported by Pär Larsson, RT #107246)
+
 0.33  2014-08-28
     - Better way to set large arrays (patch by Ken Yamaguchi, RT #97359)
     - Properly handle the quit() command (reported by tecolo, Github #5)
