--- a/Changes
+++ b/Changes
@@ -2,6 +2,7 @@ Revision history for Perl extension Statistics::R.
 
 x.xx  xxxx-xx-xx
     - Documentation improvements (contributed by Kevin Higgins)
+    - Exclude MYMETA files from tarball (reported by Alexandr Ciornii, RT #108564)
 
 0.34  2015-10-19
     - Fixed obscure issue in DESTROY (reported by Pär Larsson, RT #107246)
